fixing selection problems

--- a/rise_sns/config.json
+++ b/rise_sns/config.json
@@ -17,7 +17,7 @@
       "video": "cargo_passby.mp4"
     },
     {
-      "id": "Regina_start_stop",
+      "id": "ReginaStartStop",
       "name": "Regina med start och stopp",
       "video": "regina_start_stop.mp4"
     },
